--- a/aaa/.classpath
+++ b/aaa/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/Users/joe321/.m2/repository/com/typesafe/config/1.2.1/config-1.2.1-sources.jar"/>
 	<classpathentry kind="lib" path="/Users/joe321/.m2/repository/com/typesafe/config/1.2.1/config-1.2.1.jar"/>
+	<classpathentry kind="lib" path="/Users/joe321/.m2/repository/org/codehaus/jettison/jettison/1.3.3/jettison-1.3.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
