--- a/aaa/.classpath
+++ b/aaa/.classpath
@@ -5,5 +5,8 @@
 	<classpathentry kind="lib" path="/Users/joe321/.m2/repository/com/typesafe/config/1.2.1/config-1.2.1-sources.jar"/>
 	<classpathentry kind="lib" path="/Users/joe321/.m2/repository/com/typesafe/config/1.2.1/config-1.2.1.jar"/>
 	<classpathentry kind="lib" path="/Users/joe321/.m2/repository/org/codehaus/jettison/jettison/1.3.3/jettison-1.3.3.jar"/>
+	<classpathentry kind="lib" path="/Users/joe321/.m2/repository/com/google/inject/guice/3.0/guice-3.0.jar" sourcepath="/Users/joe321/.m2/repository/com/google/inject/guice/3.0/guice-3.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/joe321/.m2/repository/javax/inject/javax.inject/1/javax.inject-1.jar"/>
+	<classpathentry kind="lib" path="/Users/joe321/.m2/repository/aopalliance/aopalliance/1.0/aopalliance-1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
